--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title></title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div>
+        <ul>
+            <li>Menu element 1</li>
+            <li>Menu element 2</li>
+            <li>Menu element 3</li>
+            <li>Menu element 4</li>
+            <li>Menu element 5</li>
+        </ul>
+    </div>
+    <div>
+        <div>Header</div>
+        <div>Text content</div>
+    </div>
+    <div>
+        Footer
+    </div>
 </body>
 </html>
