--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
 <body>
     <div>
         <ul>
-            <li>Menu element 1</li>
-            <li>Menu element 2</li>
-            <li>Menu element 3</li>
-            <li>Menu element 4</li>
-            <li>Menu element 5</li>
+            <li>UM</li>
+            <li>Author</li>
+            <li>Album</li>
+            <li>Technology</li>
         </ul>
     </div>
     <div>
-        <div>Header</div>
-        <div>Text content</div>
+        <div>Ночная смена</div>
+        <div>
+            Холл с наслаждением затягивался сигаретой, развалившись на небольшой скамье недалеко от элеватора. Скамья эта была единственным местом на третьем этаже, где можно было спокойно перекурить и ненадолго отвлечься от работы, не опасаясь появления начальства.
+            
+            Именно в этот момент и появился зловредный Уорвик. Холл совершенно не ожидал увидеть шефа и был, естественно, совсем не рад этой неожиданной встрече, рассчитывая, что Уорвик может появиться там никак не раньше трёх. Да и вообще, он редко показывался на рабочих местах во время ночной смены. Особенно на третьем этаже. В это время он предпочитал, обычно, отсиживаться
+            <br>
+            в своём офисе попивать кофе из своего любимого электрического кофейника,
+            который стоял у него прямо на рабочем столе. КРоме того, в последнее время стояла ужасная жара и, в связи с этим, выше первого этажа Уорвик обычно не поднимался.
+        </div>
     </div>
     <div>
-        Footer
+        (с) 2003-2008 Ulin Music
     </div>
 </body>
 </html>
