--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Именно в этот момент и появился зловредный Уорвик. Холл совершенно не ожидал увидеть шефа и был, естественно, совсем не рад этой неожиданной встрече, рассчитывая, что Уорвик может появиться там никак не раньше трёх. Да и вообще, он редко показывался на рабочих местах во время ночной смены. Особенно на третьем этаже. В это время он предпочитал, обычно, отсиживаться
             <br>
             в своём офисе попивать кофе из своего любимого электрического кофейника,
-            который стоял у него прямо на рабочем столе. КРоме того, в последнее время стояла ужасная жара и, в связи с этим, выше первого этажа Уорвик обычно не поднимался.
+            который стоял у него прямо на рабочем столе. Кроме того, в последнее время стояла ужасная жара и, в связи с этим, выше первого этажа Уорвик обычно не поднимался.
         </div>
     </div>
     <div>
