--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <div>
+<body class="fes-body">
+    <div class="fes-nav">
         <ul>
             <li>UM</li>
             <li>Author</li>
@@ -18,8 +18,8 @@
         </ul>
     </div>
     <div>
-        <div>Ночная смена</div>
-        <div>
+        <div class="fes-content fes-content-header">Ночная смена</div>
+        <div class="fes-content fes-content-text">
             Холл с наслаждением затягивался сигаретой, развалившись на небольшой скамье недалеко от элеватора. Скамья эта была единственным местом на третьем этаже, где можно было спокойно перекурить и ненадолго отвлечься от работы, не опасаясь появления начальства.
             
             Именно в этот момент и появился зловредный Уорвик. Холл совершенно не ожидал увидеть шефа и был, естественно, совсем не рад этой неожиданной встрече, рассчитывая, что Уорвик может появиться там никак не раньше трёх. Да и вообще, он редко показывался на рабочих местах во время ночной смены. Особенно на третьем этаже. В это время он предпочитал, обычно, отсиживаться
@@ -28,7 +28,7 @@
             который стоял у него прямо на рабочем столе. Кроме того, в последнее время стояла ужасная жара и, в связи с этим, выше первого этажа Уорвик обычно не поднимался.
         </div>
     </div>
-    <div>
+    <div class="fes-footer">
         (с) 2003-2008 Ulin Music
     </div>
 </body>
