Inline-block for navigation

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body class="fes-body">
     <div class="fes-nav">
         <ul>
-            <li>UM</li>
-            <li>Author</li>
-            <li>Album</li>
-            <li>Technology</li>
+            <li class="fes-nav-el">UM</li>
+            <li class="fes-nav-el">Author</li>
+            <li class="fes-nav-el">Album</li>
+            <li class="fes-nav-el">Technology</li>
         </ul>
     </div>
     <div>
