--- a/index.html
+++ b/index.html
@@ -9,27 +9,32 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="fes-body">
-    <div class="fes-nav">
-        <ul>
-            <li class="fes-nav-el">UM</li>
-            <li class="fes-nav-el">Author</li>
-            <li class="fes-nav-el">Album</li>
-            <li class="fes-nav-el">Technology</li>
-        </ul>
-    </div>
-    <div>
-        <div class="fes-content fes-content-header">Ночная смена</div>
-        <div class="fes-content fes-content-text">
-            Холл с наслаждением затягивался сигаретой, развалившись на небольшой скамье недалеко от элеватора. Скамья эта была единственным местом на третьем этаже, где можно было спокойно перекурить и ненадолго отвлечься от работы, не опасаясь появления начальства.
-            
-            Именно в этот момент и появился зловредный Уорвик. Холл совершенно не ожидал увидеть шефа и был, естественно, совсем не рад этой неожиданной встрече, рассчитывая, что Уорвик может появиться там никак не раньше трёх. Да и вообще, он редко показывался на рабочих местах во время ночной смены. Особенно на третьем этаже. В это время он предпочитал, обычно, отсиживаться
-            <br>
-            в своём офисе попивать кофе из своего любимого электрического кофейника,
-            который стоял у него прямо на рабочем столе. Кроме того, в последнее время стояла ужасная жара и, в связи с этим, выше первого этажа Уорвик обычно не поднимался.
-        </div>
-    </div>
-    <div class="fes-footer">
-        (с) 2003-2008 Ulin Music
+    <div class="fes-spacing">
+        <div class="fes-nav">
+                <ul>
+                    <li class="fes-nav-el">UM</li>
+                    <li class="fes-nav-el">Author</li>
+                    <li class="fes-nav-el">Album</li>
+                    <li class="fes-nav-el">Technology</li>
+                </ul>
+            </div>
+            <div>
+                <div class="fes-content fes-content-header">Ночная смена</div>
+                <div class="fes-content fes-content-text">
+                    <p>
+                        Холл с наслаждением затягивался сигаретой, развалившись на небольшой скамье недалеко от элеватора. Скамья эта была единственным местом на третьем этаже, где можно было спокойно перекурить и ненадолго отвлечься от работы, не опасаясь появления начальства.
+                    </p>
+                    <p>
+                        Именно в этот момент и появился зловредный Уорвик. Холл совершенно не ожидал увидеть шефа и был, естественно, совсем не рад этой неожиданной встрече, рассчитывая, что Уорвик может появиться там никак не раньше трёх. Да и вообще, он редко показывался на рабочих местах во время ночной смены. Особенно на третьем этаже. В это время он предпочитал, обычно, отсиживаться
+                        <br>
+                        в своём офисе попивать кофе из своего любимого электрического кофейника,
+                        который стоял у него прямо на рабочем столе. Кроме того, в последнее время стояла ужасная жара и, в связи с этим, выше первого этажа Уорвик обычно не поднимался.
+                    </p>
+                </div>
+            </div>
+            <div class="fes-footer">
+                &copy; 2003-2008 Ulin Music
+            </div>
     </div>
 </body>
 </html>
